--- a/assets/style.css
+++ b/assets/style.css
@@ -60,11 +60,11 @@ body{
     text-align: center;
 }
 
-links{
-
-}
-
 img{
     padding-right: 10px;
     padding-bottom: 10px;
+}
+
+h2{
+    color: #4aaaa5;
 }
