--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body{
 
 .wrapper{
     margin: 0 auto;
-    width: 1000px;
+    width: 100%;
 }
 
 #name{
@@ -51,6 +51,7 @@ body{
 
 .footer{
     width: 100%;
+    padding: 30px;
     background: #666666;
     color: white;
     height: 100px;
